GRAPH-1227-1 more fixes, mostly stable..